<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:elevation="40dp"
                app:cardCornerRadius="40dp"
                app:srcCompat="@drawable/profile"
                android:contentDescription="@string/profile" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:hint="@string/hintname"
                android:text="@string/name"
                android:textColor="#708090"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:hint="@string/hintWork"
                android:text="@string/student"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:hint="@string/hintAbout"
                android:text="@string/bio"
                android:textColor="#1E90FF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/skill"
                android:textColor="#696969"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/skillName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/hintSkills"
                android:text="@string/skillName"
                android:textColor="#A9A9A9" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="40dp">

                    <ImageView
                        android:id="@+id/linkedin"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="30dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/linkedin"
                        android:onClick="linkedIn"
                        app:srcCompat="@drawable/linkedin" />

                    <ImageView
                        android:id="@+id/github"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/github"
                        android:onClick="gitHub"
                        app:srcCompat="@drawable/github" />

                    <ImageView
                        android:id="@+id/gmail"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/gmail"
                        android:onClick="gMail"
                        app:srcCompat="@drawable/gmail" />

                    <ImageView
                        android:id="@+id/instagram"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/instagram"
                        android:onClick="instagram"
                        app:srcCompat="@drawable/instagram" />

                    <ImageView
                        android:id="@+id/whatsapp"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="30dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/whatsapp"
                        android:onClick="whatsApp"
                        app:srcCompat="@drawable/whatsapp" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>